# obsidian_template

./: .gitattributes  .pre-commit-config.yaml  Dockerfile  README.md  vault_watcher.py
.obsidian/: community-plugins.json  workspace.json
.obsidian/plugins/obsidian-mask-builder/: COMPLETION_REPORT.md  FINAL_AUDIT_REPORT.md  PLUGIN_AUDIT_REPORT.md  README.md  compile.bat  data.json  esbuild.config.mjs  main.js  manifest.json  package-lock.json  package.json  ribbon-menu-config.toml  styles.css  tsconfig.json
.obsidian/plugins/obsidian-mask-builder/DocsPro/: _index.md
.obsidian/plugins/obsidian-mask-builder/DocsPro/00_Charter/: goal.md
.obsidian/plugins/obsidian-mask-builder/DocsPro/02_Planning/: backlog.md
.obsidian/plugins/obsidian-mask-builder/DocsPro/09_Reports/: summaries.md
.obsidian/plugins/obsidian-mask-builder/docs/dev/: architecture.md
.obsidian/plugins/obsidian-mask-builder/src/: main.ts  settings.ts
.obsidian/plugins/obsidian-mask-builder/src/ui/: analytics-panel.ts  debug-panel.ts  mask-builder-modal.ts  ribbon-menu.ts  ribbon-settings-modal.ts
.obsidian/plugins/obsidian-mask-builder/tests/: mask-parser.test.ts
.obsidian/snippets/: template-generator.js
.stfolder/: syncthing-folder-6fb0d9.txt
2_CATEGORIES/CAT-DEV/notes/: pjr.DEV.accepted.INT.MD.@CAT-DEV.md
docs/: changelog.md  functional-improvements-report.md  plugin-fix-report.md  ribbon-menu-debug-instructions.md  ribbon-menu-expansion-report.md  ribbon-menu-fix-report.md  ribbon-menu-quick-test.md  ribbon-menu-report.md  ribbon-menu-test-instructions.md  ribbon-menu-toml-guide.md  tasktracker.md
docspro/: _index.md  kb_algorithm.md  kb_applications.md  master_prompt.md  master_prompt_v2.md  standard_items.md
docspro/00_Charter/: _index.md  goal.md
docspro/01_Research/: _index.md  notes.md
docspro/02_Planning/: _index.md  backlog.md
docspro/03_Design/: _index.md  architecture.md  moc-architecture.md
docspro/04_Execution/: _index.md  migration-plan.md
docspro/04_Execution/steps/: step_001.md  step_002.md  step_003.md  step_004.md  step_005.md  step_006.md  step_007.md
docspro/05_Quality/: _index.md  tests.md
docspro/06_Risks/: _index.md
docspro/07_Decisions/: _index.md
docspro/08_KB_glossary/: _index.md
docspro/09_Reports/: _index.md  summaries.md
docspro/10_Artifacts/: _index.md
docspro/architecture/: naming-conventions.md  structure.md  technical-project-structure.md  template-structure.md
docspro/checklists/: template-checklist.md
docspro/ontology/: domain-vocabulary.md
docspro/patterns/: obsidian-workflows.md
docspro/reports/: final-integration-report.md  specialized-templates-report.md  template-expansion-report.md  template-quality-audit.md
export/: context.jsonld
kb/: README.md
kb/contacts/: README.md
plugin/obsidian-mask-builder/: .eslintrc.js  CHANGELOG.md  README.md  esbuild.config.mjs  package.json  vitest.config.ts
plugin/obsidian-mask-builder/.github/workflows/: release.yml
plugin/obsidian-mask-builder/docs/checklists/: quality-checklist.md
plugin/obsidian-mask-builder/src/: main.ts  settings.ts
plugin/obsidian-mask-builder/src/ui/: analytics-panel.ts  debug-panel.ts  mask-builder-modal.ts  settings-tab.ts
plugin/obsidian-mask-builder/src/utils/: analytics.ts  error-handler.ts  file-manager.ts  mask-parser.ts  performance-monitor.ts
plugin/obsidian-mask-builder/tests/: analytics.test.ts  error-handler.test.ts  performance-monitor.test.ts  setup.ts
plugins/api-toolbar/: CHANGELOG.md  README.md  manifest.json  package.json  styles.css  tsconfig.json
plugins/api-toolbar/docs/: ALGORITHM.md
plugins/api-toolbar/src/: main.ts  settings.ts
plugins/api-toolbar/src/ui/: settings-tab.ts
plugins/api-toolbar/src/utils/: template.ts
schemas/: category.json  note.json  part.json  project.json  source.json
scripts/: connectivity-analysis.js  export_archive.py  performance-audit.js  report_week.py  validate_frontmatter.py
scripts/automation/: specification-generator.js
scripts/dataview/: quality-checker.js
templates/: README.md  adr.md  category.md  category_template.md  concept.md  contact_template.md  cq.md  decision.md  decision_template.md  electronic-project.md  entity.md  explanation.md  history_template.md  how-to.md  law_template.md  mechanical-project.md  meeting.md  metric.md  note_category.md  note_project.md  note_template.md  ontology.md  organization.md  part.md  part_template.md  pattern.md  person.md  process-map.md  process.md  project.md  project_template.md  reference.md  review.md  software-project.md  source_info.md  source_template.md  sprint.md  standard-part.md  standard_item_template.md  tutorial.md
vault_watcher/: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
vault_watcher/configs/: vault_watcher.toml
vault_watcher/src/vault_watcher/: __init__.py  api.py  cli.py  config.py  core.py  gui.py  logging.py
vault_watcher/tests/: __init__.py  test_config.py
(+7 files in other folders)
